--- a/devicesettings/res/drawable/ic_settings_gestures.xml
+++ b/devicesettings/res/drawable/ic_settings_gestures.xml
@@ -1,7 +1,7 @@
 <!--
-Copyright (C) 2014 The Android Open Source Project
+    Copyright (C) 2016 The Android Open Source Project
 
-   Licensed under the Apache License, Version 2.0 (the "License");
+    Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
 
@@ -14,15 +14,15 @@ Copyright (C) 2014 The Android Open Source Project
     limitations under the License.
 -->
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-        android:width="64dp"
-        android:height="64dp"
-        android:viewportWidth="64"
-        android:viewportHeight="64">
+        android:width="24.0dp"
+        android:height="24.0dp"
+        android:viewportWidth="64.0"
+        android:viewportHeight="64.0">
 
     <group
             android:translateY="-988.583">
         <path
-                android:fillColor="@android:color/white"
+                android:fillColor="?android:attr/colorAccent"
                 android:pathData="M15.0133
 1051.24c-1.3615-0.2479-2.37425-1.2789-2.57968-2.6262-0.06554-0.4298-0.06571-55.8484-0.00018-56.28
 0.09875-0.65024 0.367851-1.20544 0.812983-1.6773 0.402211-0.42637
